# first-news-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  first-news.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  first-news.rockspec  first-news_sdk.lua  first-news_types.lua
php/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  composer.json  config.php  features.php  (+1 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  firstnews_sdk.py  firstnews_types.py  pyproject.toml
py/core/: control.py  error.py  helpers.py  response.py  result.py  spec.py  utility_type.py
py/entity/: new_entity.py
py/feature/: audit_feature.py  debug_feature.py  log_feature.py  metrics_feature.py  proxy_feature.py  ratelimit_feature.py  rbac_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_exists.py  test_feature.py  test_netsim.py  test_new_direct.py  test_new_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_init.py  make_context.py  make_error.py  make_options.py  make_request.py  make_response.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_query.py  result_basic.py  transform_request.py
(+414 files in other folders)
